# OpenBrowser

./: .env  Cargo.toml  README.md
migrations/: 20221225140000_create_tables_sites.sql  20230111213000_add_cloumn_times.sql
src/: database.rs  main.rs
