[package]
name = "open_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.23.0", features = ["full"] }
webbrowser = "0.8.2"
anyhow = "1.0"
structopt = "0.3"
dotenvy = "0.15.6"
